add hero image, logo image, update index file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Medilab Bootstrap Template - Index</title>
+  <title>Kingsway Dental Centre</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,8 +44,9 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">contact@example.com</a>
-        <i class="bi bi-phone"></i> +1 5589 55488 55
+        <i class="bi bi-envelope"></i> <a href="mailto:dranna@kingswaydentalcentre.ca">dranna@kingswaydentalcentre.ca</a>
+        <i class="bi bi-phone"></i>Phone: 416-233-0016        
+        <i class="bi bi-phone"></i>Fax: 416-237-9259
       </div>
       <div class="d-none d-lg-flex social-links align-items-center">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -60,9 +61,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Medilab</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <h1 class="logo me-auto"><a href="index.html">Kingsway Dental Centre</a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
